crates/parser/tests/cases/snapshots/cases__parse_ast__module_level_events.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(module_level_events), try_parse_module,\n           r#\"\nuse std::context::Context\n\nevent Transfer:\n    idx sender: address\n    idx receiver: address\n    value: u256\n\ncontract Foo:\n    fn transfer(ctx: Context, to: address, value: u256):\n        emit Transfer(ctx, sender: msg.sender, receiver: to, value)\n\"#)"

---
Node(
  kind: Module(
    body: [
      Use(Node(
        kind: Use(
          tree: Node(
            kind: Simple(
              path: Path(
                segments: [
                  Node(
                    kind: "std",
                    span: Span(
                      start: 5,
                      end: 8,
                    ),
                  ),
                  Node(
                    kind: "context",
                    span: Span(
                      start: 10,
                      end: 17,
                    ),
                  ),
                  Node(
                    kind: "Context",
                    span: Span(
                      start: 19,
                      end: 26,
                    ),
                  ),
                ],
              ),
              rename: None,
            ),
            span: Span(
              start: 5,
              end: 26,
            ),
          ),
        ),
        span: Span(
          start: 1,
          end: 26,
        ),
      )),
      Event(Node(
        kind: Event(
          name: Node(
            kind: "Transfer",
            span: Span(
              start: 34,
              end: 42,
            ),
          ),
          fields: [
            Node(
              kind: EventField(
                is_idx: true,
                name: Node(
                  kind: "sender",
                  span: Span(
                    start: 52,
                    end: 58,
                  ),
                ),
                typ: Node(
                  kind: Base(
                    base: "address",
                  ),
                  span: Span(
                    start: 60,
                    end: 67,
                  ),
                ),
              ),
              span: Span(
                start: 48,
                end: 67,
              ),
            ),
            Node(
              kind: EventField(
                is_idx: true,
                name: Node(
                  kind: "receiver",
                  span: Span(
                    start: 76,
                    end: 84,
                  ),
                ),
                typ: Node(
                  kind: Base(
                    base: "address",
                  ),
                  span: Span(
                    start: 86,
                    end: 93,
                  ),
                ),
              ),
              span: Span(
                start: 72,
                end: 93,
              ),
            ),
            Node(
              kind: EventField(
                is_idx: false,
                name: Node(
                  kind: "value",
                  span: Span(
                    start: 98,
                    end: 103,
                  ),
                ),
                typ: Node(
                  kind: Base(
                    base: "u256",
                  ),
                  span: Span(
                    start: 105,
                    end: 109,
                  ),
                ),
              ),
              span: Span(
                start: 98,
                end: 109,
              ),
            ),
          ],
          pub_qual: None,
        ),
        span: Span(
          start: 28,
          end: 109,
        ),
      )),
      Contract(Node(
        kind: Contract(
          name: Node(
            kind: "Foo",
            span: Span(
              start: 120,
              end: 123,
            ),
          ),
          fields: [],
          body: [
            Function(Node(
              kind: Function(
                pub_: None,
                unsafe_: None,
                name: Node(
                  kind: "transfer",
                  span: Span(
                    start: 132,
                    end: 140,
                  ),
                ),
                args: [
                  Node(
                    kind: Regular(RegularFunctionArg(
                      label: None,
                      name: Node(
                        kind: "ctx",
                        span: Span(
                          start: 141,
                          end: 144,
                        ),
                      ),
                      typ: Node(
                        kind: Base(
                          base: "Context",
                        ),
                        span: Span(
                          start: 146,
                          end: 153,
                        ),
                      ),
                    )),
                    span: Span(
                      start: 141,
                      end: 153,
                    ),
                  ),
                  Node(
                    kind: Regular(RegularFunctionArg(
                      label: None,
                      name: Node(
                        kind: "to",
                        span: Span(
                          start: 155,
                          end: 157,
                        ),
                      ),
                      typ: Node(
                        kind: Base(
                          base: "address",
                        ),
                        span: Span(
                          start: 159,
                          end: 166,
                        ),
                      ),
                    )),
                    span: Span(
                      start: 155,
                      end: 166,
                    ),
                  ),
                  Node(
                    kind: Regular(RegularFunctionArg(
                      label: None,
                      name: Node(
                        kind: "value",
                        span: Span(
                          start: 168,
                          end: 173,
                        ),
                      ),
                      typ: Node(
                        kind: Base(
                          base: "u256",
                        ),
                        span: Span(
                          start: 175,
                          end: 179,
                        ),
                      ),
                    )),
                    span: Span(
                      start: 168,
                      end: 179,
                    ),
                  ),
                ],
                return_type: None,
                body: [
                  Node(
                    kind: Emit(
                      name: Node(
                        kind: "Transfer",
                        span: Span(
                          start: 195,
                          end: 203,
                        ),
                      ),
                      args: Node(
                        kind: [
                          Node(
                            kind: CallArg(
                              label: None,
                              value: Node(
                                kind: Name("ctx"),
                                span: Span(
                                  start: 204,
                                  end: 207,
                                ),
                              ),
                            ),
                            span: Span(
                              start: 204,
                              end: 207,
                            ),
                          ),
                          Node(
                            kind: CallArg(
                              label: Some(Node(
                                kind: "sender",
                                span: Span(
                                  start: 209,
                                  end: 215,
                                ),
                              )),
                              value: Node(
                                kind: Attribute(
                                  value: Node(
                                    kind: Name("msg"),
                                    span: Span(
                                      start: 217,
                                      end: 220,
                                    ),
                                  ),
                                  attr: Node(
                                    kind: "sender",
                                    span: Span(
                                      start: 221,
                                      end: 227,
                                    ),
                                  ),
                                ),
                                span: Span(
                                  start: 217,
                                  end: 227,
                                ),
                              ),
                            ),
                            span: Span(
                              start: 209,
                              end: 227,
                            ),
                          ),
                          Node(
                            kind: CallArg(
                              label: Some(Node(
                                kind: "receiver",
                                span: Span(
                                  start: 229,
                                  end: 237,
                                ),
                              )),
                              value: Node(
                                kind: Name("to"),
                                span: Span(
                                  start: 239,
                                  end: 241,
                                ),
                              ),
                            ),
                            span: Span(
                              start: 229,
                              end: 241,
                            ),
                          ),
                          Node(
                            kind: CallArg(
                              label: None,
                              value: Node(
                                kind: Name("value"),
                                span: Span(
                                  start: 243,
                                  end: 248,
                                ),
                              ),
                            ),
                            span: Span(
                              start: 243,
                              end: 248,
                            ),
                          ),
                        ],
                        span: Span(
                          start: 203,
                          end: 249,
                        ),
                      ),
                    ),
                    span: Span(
                      start: 190,
                      end: 249,
                    ),
                  ),
                ],
              ),
              span: Span(
                start: 129,
                end: 249,
              ),
            )),
          ],
          pub_qual: None,
        ),
        span: Span(
          start: 111,
          end: 249,
        ),
      )),
    ],
  ),
  span: Span(
    start: 0,
    end: 249,
  ),
)
