crates/parser/tests/cases/snapshots/cases__parse_ast__pragma3.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(pragma3), module::parse_pragma, \"pragma >= 1.2, < 1.5\")"

---
Node(
  kind: Pragma(
    version_requirement: Node(
      kind: ">=1.2,<1.5",
      span: Span(
        start: 7,
        end: 20,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 20,
  ),
)
