crates/parser/tests/cases/snapshots/cases__parse_ast__pub_const_def.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(pub_const_def), try_parse_module,\n           \"pub const FOO: i32 = 1\")"

---
Node(
  kind: Module(
    body: [
      Constant(Node(
        kind: ConstantDecl(
          name: Node(
            kind: "FOO",
            span: Span(
              start: 10,
              end: 13,
            ),
          ),
          typ: Node(
            kind: Base(
              base: "i32",
            ),
            span: Span(
              start: 15,
              end: 18,
            ),
          ),
          value: Node(
            kind: Num("1"),
            span: Span(
              start: 21,
              end: 22,
            ),
          ),
          pub_qual: Some(Span(
            start: 0,
            end: 3,
          )),
        ),
        span: Span(
          start: 4,
          end: 22,
        ),
      )),
    ],
  ),
  span: Span(
    start: 0,
    end: 22,
  ),
)
