crates/parser/tests/cases/snapshots/cases__parse_ast__stmt_match4.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(stmt_match4), functions::parse_stmt,\n    r#\"match my_enum {\n    mymod::MyS {}  => {\n        return 1\n    }\n}\"#)"
---
Node(
  kind: Match(
    expr: Node(
      kind: Name("my_enum"),
      span: Span(
        start: 6,
        end: 13,
      ),
    ),
    arms: [
      Node(
        kind: MatchArm(
          pat: Node(
            kind: PathStruct(
              path: Node(
                kind: Path(
                  segments: [
                    Node(
                      kind: "mymod",
                      span: Span(
                        start: 20,
                        end: 25,
                      ),
                    ),
                    Node(
                      kind: "MyS",
                      span: Span(
                        start: 27,
                        end: 30,
                      ),
                    ),
                  ],
                ),
                span: Span(
                  start: 20,
                  end: 30,
                ),
              ),
              fields: [],
              has_rest: false,
            ),
            span: Span(
              start: 31,
              end: 33,
            ),
          ),
          body: [
            Node(
              kind: Return(
                value: Some(Node(
                  kind: Num("1"),
                  span: Span(
                    start: 55,
                    end: 56,
                  ),
                )),
              ),
              span: Span(
                start: 48,
                end: 56,
              ),
            ),
          ],
        ),
        span: Span(
          start: 31,
          end: 62,
        ),
      ),
    ],
  ),
  span: Span(
    start: 0,
    end: 64,
  ),
)
